2009-07-29  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Applied Gordon's patch for updating blur area on rotation.
	Fixes: NB#125749

	* src/tidy/tidy-blur-group.c:

2009-07-28  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.68

2009-07-28  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/util/hd-util.c (hd_util_change_screen_orientation):
	  Use XChangeProperty()/XDeleteProperty() to communicate
	  SUPPRESS_ROOT_RECONFIGURATION to the X server rather than
	  setting and clearing the property.  Requires newer libmatchbox2
	  and Xorg.

2009-07-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-render-manager.h (STATE_DISCARD_PREVIEW_NOTE):
	  Don't show notification previews in launcher view.

2009-07-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* data/transitions.ini
	* src/util/hd-transition.c (on_notification_timeline_new_frame):
	  Reworked the closing part of the notification preview transition
	  to be cooler (and more comprehensible at the same time).

2009-07-27  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.67

2009-07-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-render-manager.c:
	  Adding missing <sys/time.h>

2009-07-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-note.c: reverting, it's incomplete (doesn't cover
	dialogs) and it breaks system-modal notes in application view.

2009-07-27  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Do not restack the parent windows of notes when the notes map.
	Fixes NB#121341.

	* src/mb/hd-note.c:

2009-07-24  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Prevent a race condition when reloading the apps menu.
	Is a solution for: NB#129747

	* src/launcher/hd-launcher.c:

2009-07-24  Gordon Williams <gordon.williams@collabora.co.uk>

	Resolves 129741 - Confirmation note getting closed by tapping on 
	                  status area. 
	Regression caused by 128086's fix. Re-implemented in a better way