@@ -1,3 +1,9 @@
+2009-07-29  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	* src/home/hd-home.c (hd_home_desktop_key_press,
+		hd_home_desktop_key_release):
+	  Some g_debug(), may come handy some time.
+
 2009-07-29  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
 
 	Applied Gordon's patch for updating blur area on rotation.
